added events, styling, code section

--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -3,9 +3,10 @@
     <br>
     <h3><b>/// Upcoming ///</b></h3>
 
-    <p>09/29/19 — Ben Eisenberger @ Lucy’s Pub for House Fest (5:30pm)</p>
-    <p>10/03/19 — Hussies w/ Plague Vendor, No Parents @ Slowdown</p>
     <p>10/14/19 — Ben Eisenberger w/ Princess, Brent Penny, Voske @ The Sydney</p>
+    <p>12/02/19 - 12/08/19 - Contracted guitarist for <i>Legally Blonde: The Musical</i> at Papillion La Vista South High School</p>
+    <p>01/31/20 - 02/16/20 - Contracted guitarist for <i>Mamma Mia</i> at Performing Arts Repertory Theater</p>
+    <p>04/17/20 - 05/10/20 - Contracted guitarist for <i>Bright Star</i> at Omaha Community Playhouse</p>
 
     <br><br>
 
