--- a/src/app/events/y2019/y2019.component.html
+++ b/src/app/events/y2019/y2019.component.html
@@ -43,3 +43,5 @@
     Virginia Kathryn @ Mooncottage</p>
 <p>09/13/19 — Ben Eisenberger w/ And How @ MaMAW’s House</p>
 <p>09/14/19 — Hussies w/ In The Whale, Natural States @ O'Leaver's</p>
+<p>09/29/19 — Ben Eisenberger @ Lucy’s Pub for House Fest (5:30pm)</p>
+<p>10/03/19 — Hussies w/ Plague Vendor, No Parents @ Slowdown</p>
