about page / events page

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,30 +1,35 @@
 <div class="container col-12">
     <div>
-        <img class="main-img col-12"
-            src="./assets/benmain.jpg">
+        <img class="main-img col-12" src="./assets/benmain.jpg">
     </div>
-    
-        <section>
-            <div class="bio">
-                <p>Ben Eisenberger is an Omaha, Nebraska-based guitarist and songwriter, and a graduate
-                    of the University of Nebraska at Omaha’s classical guitar program. His debut solo
-                    release <a href="http://beneisenberger.bandcamp.com/album/three-islands">Three Islands</a>, a
-                    collection of warm
-                    and pensive acoustic songs, was released
-                    on April 24th, 2018 on cassette and digitally. A nationwide solo tour followed in
-                    September of 2018, and a midwest and southern tour in March 2019.
-                    <br><br>
-                    In 2015, Ben co-founded the experimental collective Screaming Plastic,
-                    which has released two cassettes of live improvisations and whose debut
-                    album was funded by a <a href="https://www.newmusicusa.org/projects/screaming-plastic/">New Music
-                        USA</a> grant. He also plays guitar in the band Hussies,
-                    who have been active in the Omaha music scene since 2012, and have a forthcoming
-                    cassette to be released in early 2019.
-                    <br><br>
-                    In addition to original music, Ben also does contracted work for musicals, choirs,
-                    and weddings, and also teaches private lessons. He is also currently attending Midland University's
-                    Code Academy, an accellerated web developmemt course.
-                </p>
-            </div>
-        </section>
+
+    <section>
+        <div class="bio">
+            <p>I'm an Omaha, Nebraska-based guitarist, songwriter, web developer, and a graduate
+                of both the University of Nebraska at Omaha’s classical guitar program and the Midland University Code
+                Academy. My debut solo
+                release <a href="http://beneisenberger.bandcamp.com/album/three-islands">Three Islands</a>, a
+                collection of warm
+                and pensive acoustic songs, was released
+                on April 24th, 2018 on cassette and digitally. A nationwide solo tour followed in
+                September of 2018, and a midwest and southern tour in March 2019.
+                <br><br>
+                In 2015, I co-founded the experimental collective Screaming Plastic,
+                which has released two cassettes of live improvisations and whose debut
+                album was funded by a <a href="https://www.newmusicusa.org/projects/screaming-plastic/">New Music
+                    USA</a> grant. I also play guitar in the band Hussies,
+                who have been active in the Omaha music scene since 2012, and released our latest cassette, "Fast" in
+                early 2019.
+                <br><br>
+                For web development, I have a strong fountation in Angular 6+, HTML5, CSS, JavaScript and TypeScript,
+                SQL, Bootstrap and Material Design, Google Firebase/Firestore, NodeJS and Express. Most of my projects
+                are built using these frameworks, but I am currently trying to expand my knowledge with other frameworks
+                and libraries.
+                <br><br>
+                In addition to original music, I also do contracted work for musicals, choirs,
+                and weddings, teach private lessons, and spend my free time dreaming up new coding projects and
+                collaborating with other developers.
+            </p>
+        </div>
+    </section>
 </div>
