--- a/src/app/events/y2019/y2019.component.html
+++ b/src/app/events/y2019/y2019.component.html
@@ -45,3 +45,4 @@
 <p>09/14/19 — Hussies w/ In The Whale, Natural States @ O'Leaver's</p>
 <p>09/29/19 — Ben Eisenberger @ Lucy’s Pub for House Fest (5:30pm)</p>
 <p>10/03/19 — Hussies w/ Plague Vendor, No Parents @ Slowdown</p>
+<p>10/14/19 — Ben Eisenberger w/ Princess, Brent Penny, Voske @ The Sydney</p>
