--- a/src/app/code/code.component.html
+++ b/src/app/code/code.component.html
@@ -1,27 +1,20 @@
 <div class="container col-12">
 
-<h2 class="title center">Individual Projects</h2>
-<mat-card class="example-card" *ngFor="let individual of individual">
-    <mat-card-header>
-      <div mat-card-avatar class="example-header-image"></div>
-      <mat-card-title><h2 class="title2">{{individual.name}} - [<a href="{{individual.github}}" target="_blank">view code</a>] [<a href="{{individual.link}}" target="_blank">view in browser</a>]</h2></mat-card-title>
-    </mat-card-header>
-    <img class="margin" mat-card-image src="{{individual.img}}">
-    <mat-card-content>
-      <p>{{individual.desc}}</p>
-    </mat-card-content>
-  </mat-card>
+    <h2 class="center title">Code</h2>
 
-  <h2 class="title center">Group Projects</h2>
-<mat-card class="example-card" *ngFor="let group of group">
-    <mat-card-header>
-      <div mat-card-avatar class="example-header-image"></div>
-      <mat-card-title class="title2">{{group.name}} - [<a href="{{group.github}}" target="_blank">view code</a>] [<a href="{{group.link}}" target="_blank">view in browser</a>]</mat-card-title>
-    </mat-card-header>
-    <img class="margin" mat-card-image src="{{group.img}}">
-    <mat-card-content>
-      <p>{{group.desc}}</p>
-    </mat-card-content>
-  </mat-card>
+  <div class="card card-image" *ngFor="let individual of individual">
+
+    <!-- Content -->
+    <div class="text-white text-center d-flex align-items-center rgba-black-strong py-5 px-4 card-thing" [style.background-image]="'url('+individual.img+')'">
+      <div>
+        <h3 class="card-title pt-2"><strong>{{individual.name}}</strong></h3>
+        <p>{{individual.desc}}</p>
+        <a class="btn btn-pink" href="{{individual.link}}"><i class="fas fa-clone left"></i>View in Broswer</a>
+        <a class="btn btn-pink" href="{{individual.github}}"><i class="fas fa-code left"></i>View Code</a>
+      </div>
+    </div>
+  
+  </div>
 
 </div>
+
