--- a/src/app/media/media.component.html
+++ b/src/app/media/media.component.html
@@ -2,49 +2,22 @@
 
     <h2 class="center title">Music</h2>
 
-
-    <section class="music-embed row">
-        <iframe class="col-4" style="border: 0; width: 250px; height: 392px;"
-            src="https://bandcamp.com/EmbeddedPlayer/album=1720225765/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/transparent=true/"
-            seamless><a href="http://beneisenberger.bandcamp.com/album/three-islands">Three Islands by Ben
-                Eisenberger</a></iframe>
-        <div class="col-8">
-            <h3><b>Ben Eisenberger</b></h3>
-            <p>Pretty and pensive acoustic songs written by myself. In my dreams I would liken my style to a kind of Nick Drake-Joni Mitchell-Joanna Newsom hybrid. The album <i>Three Islands</i> was inspired by, and in fact my solo music writing in general was started by, a trip I took in 2016 to Southeast Asia. A forthcoming record is currently being recorded and will include more instuments, but of course with the same somber timbre as my debut.</p>
+    <section class="music-embed row" *ngFor="let music of music" [style.background-image]="'url('+music.backgroundImage+')'">
+        <iframe *ngIf="displayBandcamp" class="col-4" style="border: 0; width: 250px; height: 392px;"
+            [src]="sanitizer.bypassSecurityTrustResourceUrl(music.embed.album)"
+            seamless><a href="{{music.embed.link}}">{{music.embed.title}}</a></iframe>
+        <div class="col-8 artist">
+            <h3><b>{{music.artist}}</b></h3>
+            <p>{{music.description}}</p>
             <h3><b>Releases:</b></h3>
-            <p>Three Islands  (2018)</p>
-        </div>
+            <p *ngFor="let release of music.releases">{{release}}</p>
 
-        <iframe class="col-4" style="border: 0; width: 250px; height: 392px;"
-            src="https://bandcamp.com/EmbeddedPlayer/album=3402947417/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/transparent=true/"
-            seamless><a href="http://hussiesband.bandcamp.com/album/fast">Fast by Hussies</a></iframe>
-        <div class="col-8">
-            <h3><b>Hussies</b></h3>
-            <p>Hussies has been around since 2012, and plays regularly in Omaha with locals and honestly whoever happens to be stopping through. Fronted by best bud and fellow acoustic crooner Tom Bartolomei, Hussies carries more rock aesthetic... what critics are calling the "new Omaha sound" (we wish).</p>
-            <h3><b>Releases:</b></h3>
-            <p>Going  (2015)<br>Nowhere  (2017)<br>Fast  (2019)</p>
-        </div>
-
-        <iframe class="col-4" style="border: 0; width: 250px; height: 392px;"
-            src="https://bandcamp.com/EmbeddedPlayer/album=374132353/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/transparent=true/"
-            seamless><a href="http://screamingplastic.bandcamp.com/album/screaming-plastic-2">Screaming Plastic
-                by
-                Screaming Plastic</a></iframe>
-        <div class="col-8">
-            <h3><b>Screaming Plastic</b></h3>
-            <p>Screaming Plastic is a collective of myself, Phill Smith (electronics), Hanah Mayer (cello) and Jeff Kolega (drums). We are a quartet that records live free improvisations, usually just recorded by myself on my cell phone. In 2017 we received a grant from New Music USA to record a proper debut album, which was released in early 2019.</p>
-            <h3><b>Releases:</b></h3>
-            <p>Live Improvisations (2017)<br>Live Improvisations 2 (2017)<br>Screaming Plastic (2019)</p>
-        </div>
-
-        <iframe class="col-4" style="border: 0; width: 250px; height: 392px;"
-            src="https://bandcamp.com/EmbeddedPlayer/album=2552986554/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/transparent=true/"
-            seamless><a href="http://fifinono.bandcamp.com/album/fifi-nono">FiFi NoNo by FiFi
-                NoNo</a></iframe>
-        <div class="col-8">
-            <h3><b>FiFi NoNo</b></h3>
-            <p>The brainchild of Mike Zimmerman (Flesh-Eating Skin Disease, DROSS) and fronted by Blake Kostszewa (Shrinks) - this is definitely the "rowdy boys" group. We play(?)ed a mixture of goth punk/noise punk/hardcore and basically just like to have a good time. I think this band might be getting back together? I'm not sure. Look for that.</p>
-            <h3><b>Releases:</b></h3>
-            <p>Songs for the Anxious (2017)<br>FiFi NoNo (2018)</p>
+            <a class="icon" href="{{music.social.spotify}}"><mdb-icon fab icon="spotify"></mdb-icon></a>
+            <a class="icon" href="{{music.social.apple}}"><mdb-icon fab icon="itunes"></mdb-icon></a>
+            <a class="icon" href="{{music.social.bandcamp}}"><mdb-icon fab icon="bandcamp"></mdb-icon></a>
+            <a class="icon" href="{{music.social.discogs}}"><mdb-icon fas icon="dot-circle"></mdb-icon></a>
+            
         </div>
     </section>
+
+</div>
