--- a/src/app/media/media.component.scss
+++ b/src/app/media/media.component.scss
@@ -1,3 +1,23 @@
 img {
     height: 350px;
 }
+
+.icon {
+    margin: 10px 5px;
+    font-size: 30px;
+}
+
+section {
+    padding: 20px 0;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 100% auto;
+    background-color: rgba(0,0,0,0.7);
+    background-blend-mode: darken;
+}
+
+@media (max-width: 500px) {
+    section {
+        background-size: auto 100%;
+    }
+}
