--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -3,9 +3,9 @@
     <br>
     <h3><b>/// Upcoming ///</b></h3>
 
-    <p>12/02/19 - 12/08/19 - Contracted guitarist for <i>Legally Blonde: The Musical</i> at Papillion La Vista South High School</p>
-    <p>01/31/20 - 02/16/20 - Contracted guitarist for <i>Mamma Mia</i> at Performing Arts Repertory Theater</p>
-    <p>04/17/20 - 05/10/20 - Contracted guitarist for <i>Bright Star</i> at Omaha Community Playhouse</p>
+    <p><b><i>Unfortunately, due to the COVID-19 pandemic, all shows are cancelled or postponed for the forseeable future.</i></b></p><br>
+    <p><s>04/17/20 - 05/10/20 - Contracted guitarist for <i>Bright Star</i> at Omaha Community Playhouse</s></p>
+    <p><s>04/21/20 - Hussies w/ Cult of Lip at Brothers Lounge</s></p>
 
     <br><br>
 
@@ -17,8 +17,11 @@
 
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item" routerLinkActive="active">
-                    <a class="nav-link waves-light" mdbWavesEffect routerLink="/events/y2019">2019<span
+                    <a class="nav-link waves-light" mdbWavesEffect routerLink="/events/y2020">2020<span
                             class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item" routerLinkActive="active">
+                    <a class="nav-link waves-light" mdbWavesEffect routerLink="/events/y2019">2019</a>
                 </li>
                 <li class="nav-item" routerLinkActive="active">
                         <a class="nav-link waves-light" mdbWavesEffect routerLink="/events/y2018">2018</a>
