--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -11,7 +11,7 @@
     display: flex;
     flex-direction: column;
     padding: 0 5vw 30px 5vw;
-    min-height: 100vh;
+    min-height: calc(100vh - 52px);
 }
 
 ::ng-deep input.mat-input-element {
@@ -19,5 +19,5 @@
   }
 
 textarea {
-    height: 200px;
+    height: 100px;
 }
