--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,13 +3,17 @@
     color: white;
 }
 
+h2 {
+    padding-top: 7% !important;
+}
+
 .center {
     text-align: center;
 }
 
 body {
     color: white !important;
-    background-color: #92a795;
+    background-color: #141414;
     margin-top: 0px;
 }
 
@@ -20,6 +24,10 @@ body p {
 a, a:hover {
     color: palegreen;
     text-decoration: none;
+}
+
+.navbar {
+    box-shadow: none !important;
 }
 
 .mat-form-field-appearance-legacy {
