--- a/src/app/media/album2/album2.component.html
+++ b/src/app/media/album2/album2.component.html
@@ -2,15 +2,8 @@
     <h2>Ben Eisenberger - Victims of Circumstance (2020 / 2021)</h2>
 
     <section>
-        <mat-advanced-audio-player 
-            [playlist]="msaapPlaylist" 
-            [displayTitle]="msaapDisplayTitle" 
-            [autoPlay]="false" 
-            muted="muted" 
-            [displayPlaylist]="msaapDisplayPlayList" 
-            [pageSizeOptions]="pageSizeOptions" 
-            [displayVolumeControls]="msaapDisplayVolumeControls" 
-            [expanded]="true">
-        </mat-advanced-audio-player>
+        <p>Hi, I moved this here:</p>
+        <a href="https://soundcloud.com/beneisenberger/sets/victims-of-circumstance-unmastered/s-ALxrBs0FVTj">It streams better this way</a>
+        <p>thanks for listening</p>
     </section>
 </div>
