--- a/src/app/media/album2/album2.component.html
+++ b/src/app/media/album2/album2.component.html
@@ -2,7 +2,7 @@
     <h2>Ben Eisenberger - Victims of Circumstance (2020 / 2021)</h2>
 
     <section>
-        <p>Hi, I moved this here:</p>
+        <p>Hi, I moved this to SoundCloud:</p>
         <a href="https://soundcloud.com/beneisenberger/sets/victims-of-circumstance-unmastered/s-ALxrBs0FVTj">It streams better this way</a>
         <p>thanks for listening</p>
     </section>
