theming some more

--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -1,16 +1,15 @@
 .button {
-    display: inline-block;
-    width: 40px;
-    height: 40px;
+  display: inline-block;
+  width: 40px;
+  height: 40px;
 }
 
 .bio {
-    margin: 5%;  
-    text-align: justify;
-    padding-bottom: 10px;
+  margin: 5%;
+  text-align: justify;
+  padding-bottom: 10px;
 }
 
-.main-img {
-    object-fit: contain;
-    padding-top: 5%;
+.container {
+  color: #0e1720;
 }
