--- a/src/app/code/code.component.html
+++ b/src/app/code/code.component.html
@@ -1,20 +1,20 @@
-<div class="container col-12">
-
-    <h2 class="center title">Code</h2>
-
-  <div class="card card-image" *ngFor="let individual of individual">
-
-    <!-- Content -->
-    <div class="text-white text-center d-flex align-items-center rgba-black-strong py-5 px-4 card-thing" [style.background-image]="'url('+individual.img+')'">
-      <div>
-        <h3 class="card-title pt-2"><strong>{{individual.name}}</strong></h3>
-        <p>{{individual.desc}}</p>
-        <a class="btn btn-pink" href="{{individual.link}}"><i class="fas fa-clone left"></i>View in Broswer</a>
-        <a class="btn btn-pink" href="{{individual.github}}"><i class="fas fa-code left"></i>View Code</a>
+<div class="container fade-in">
+  <div class="code-container">
+    <div *ngFor="let individual of individual" class="repeater">
+      <div class="card-thing">
+        <img [src]="individual.img" />
+      </div>
+      <div class="buttons">
+        <h3 style="color: #72716e; text-align: center;">
+          {{ individual.name }}
+        </h3>
+        <a class="btn" href="{{ individual.link }}"
+          ><i class="fas fa-clone left"></i>View in Broswer</a
+        >
+        <a class="btn" href="{{ individual.github }}"
+          ><i class="fas fa-code left"></i>View Code</a
+        >
       </div>
     </div>
-  
   </div>
-
 </div>
-
