this is the published branch now fyi

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,4 +1,4 @@
-<div class="container col-12 fade-in">
+<div class="container col-12 fade-in top">
   <div class="img-div">
     <img class="main-img col-12" src="./assets/ben8.jpg" />
   </div>
