--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -3,18 +3,7 @@
   <br />
   <h3><b>/// Upcoming ///</b></h3>
 
-  <p>
-    12/02/19 - 12/08/19 - Contracted guitarist for
-    <i>Legally Blonde: The Musical</i> at Papillion La Vista South High School
-  </p>
-  <p>
-    01/31/20 - 02/16/20 - Contracted guitarist for <i>Mamma Mia</i> at
-    Performing Arts Repertory Theater
-  </p>
-  <p>
-    04/17/20 - 05/10/20 - Contracted guitarist for <i>Bright Star</i> at Omaha
-    Community Playhouse
-  </p>
+  <p>It's COVID y'all</p>
 
   <br /><br />
 
@@ -31,8 +20,16 @@
           <a
             class="nav-link waves-light"
             mdbWavesEffect
+            routerLink="/events/y2020"
+            >2020<span class="sr-only">(current)</span></a
+          >
+        </li>
+        <li class="nav-item" routerLinkActive="active">
+          <a
+            class="nav-link waves-light"
+            mdbWavesEffect
             routerLink="/events/y2019"
-            >2019<span class="sr-only">(current)</span></a
+            >2019</a
           >
         </li>
         <li class="nav-item" routerLinkActive="active">
