--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,5 +1,5 @@
 <mdb-navbar
-  SideClass="navbar navbar-expand-md ie-nav fixed-top"
+  SideClass="navbar navbar-1 navbar-dark navbar-expand-md ie-nav fixed-top"
   [containerInside]="false"
 >
   <links>
