--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -11,7 +11,7 @@
   text-align: center;
   padding-top: 15px;
   a {
-    color: #0e1720 !important;
+    color: #d1dde0 !important;
     font-weight: 500;
   }
 }
@@ -22,7 +22,7 @@
 }
 
 .active a {
-  color: #d1dde0 !important;
+  color: black !important;
 }
 
 @media (max-width: 768px) {
