--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,13 +24,23 @@
   background-color: #648061 !important;
   box-shadow: none !important;
   padding: 0 !important;
-  height: 60px !important;
+  height: 75px !important;
   padding-left: calc(50% - 384.5px) !important;
 }
 
 .navbar-nav {
   margin-right: 0 !important;
 }
+
+.navbar-collapse {
+  background-color: #648061;
+}
+
+// fixed-top,
+// span {
+//   background-color: white !important;
+//   margin-left: 20px;
+// }
 
 .center {
   text-align: center;
