--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -12,6 +12,7 @@
   flex-direction: column;
   padding: 0 5vw 30px 5vw;
   min-height: 100vh;
+  max-width: 500px;
 }
 
 ::ng-deep input.mat-input-element {
