--- a/src/app/events/y2020/y2020.component.html
+++ b/src/app/events/y2020/y2020.component.html
@@ -3,7 +3,14 @@
   12/02/19 - 12/08/19 - Contracted guitarist for Legally Blonde: The Musical at
   Papillion La Vista South High School
 </p>
+<p>12/01/20 - Hussies @O'leavers</p>
 <p>
   01/31/20 - 02/16/20 - Contracted guitarist for Mamma Mia at Performing Arts
   Repertory Theater
+</p>
+<p>
+  Contracted Guitarist for Penguin Problems @ The Rose Theater (pandemic, dates varried)
+</p>
+<p>
+  11/16/20 - Ben Eisenberger w/ Oceanator, Sonny Falls, Calyx, Alex Joseph (Livestream for Plastic Miracles)
 </p>
